[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/enemy/boss/Boss1/Boss1Gun.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemy/boss/boss3/Boss3MG.png" type="Texture" id=2]
[ext_resource path="res://scenes/sound/PlayerHit.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.53879, 7.06396 )

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.835294, 0.152941, 0.152941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boss3MG" type="KinematicBody2D"]
script = ExtResource( 1 )
hp = 50
score = 60
burst = 6

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -0.5, 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2

[node name="PlayerHit" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
